<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp"
    android:background="@drawable/inset_border_drawable"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_gravity="center">

        <TextView

            android:id="@+id/refresh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/refresh_mode" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="5dp">

        <Button
            android:id="@+id/button1"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/contrast" />

        <Button
            android:id="@+id/button2"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/speed" />

        <Button
            android:id="@+id/button3"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button4"
            style="@style/MenuButtonStyle"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:text="@string/light" />

    </LinearLayout>




</LinearLayout>
